# consensus-specs

./: .gitignore  .pr_agent.toml  Makefile  README.md  pyproject.toml  requirements_preinstallation.txt  setup.py  sitemap.xml
.circleci/: config.yml
.claude/skills/new-feature/: SKILL.md
.claude/skills/write-specs/: SKILL.md
.github/: dependabot.yml  review.md
.github/actions/combine-coverages/: action.yml
.github/workflows/: checks.yml  claude.yml  comptests.yml  docs.yml  generate_vectors.yml  nightly-tests.yml  pr_agent.yml  quorum.yml  release.yml  run-tests.yml  stale.yml  tests.yml  website.yml
_features/eip8025/proof-engine/: index.html
altair/light-client/sync-protocol/: index.html
altair/p2p-interface/: index.html
altair/validator/: index.html
bellatrix/beacon-chain/: index.html
bellatrix/fork-choice/: index.html
bellatrix/p2p-interface/: index.html
bellatrix/validator/: index.html
capella/beacon-chain/: index.html
capella/fork-choice/: index.html
capella/light-client/sync-protocol/: index.html
capella/p2p-interface/: index.html
capella/validator/: index.html
deneb/beacon-chain/: index.html
deneb/fork-choice/: index.html
deneb/p2p-interface/: index.html
deneb/polynomial-commitments/: index.html
deneb/validator/: index.html
docker/: Dockerfile
electra/beacon-chain/: index.html
electra/fork/: index.html
electra/p2p-interface/: index.html
electra/validator/: index.html
fulu/p2p-interface/: index.html
fulu/polynomial-commitments-sampling/: index.html
fulu/validator/: index.html
gloas/beacon-chain/: index.html
gloas/fork-choice/: index.html
heze/beacon-chain/: index.html
heze/fork-choice/: index.html
heze/inclusion-list/: index.html
heze/p2p-interface/: index.html
heze/validator/: index.html
phase0/fast-confirmation/: index.html
phase0/fork-choice/: index.html
phase0/p2p-interface/: index.html
pysetup/: constants.py  generate_specs.py  helpers.py  md_to_spec.py  typing.py  verify_type_inheritance.py
pysetup/spec_builders/: altair.py  base.py  bellatrix.py  capella.py  deneb.py  eip7594.py  electra.py  fulu.py  gloas.py  heze.py  phase0.py
scripts/: quorum.py
search/: search_index.json
solidity_deposit_contract/: README.md
specs/_features/eip7594/: polynomial-commitments-sampling.md
specs/_features/eip8025/: beacon-chain.md  fork-choice.md
specs/_features/eip8148/: beacon-chain.md
specs/altair/: beacon-chain.md  bls.md  fork.md  p2p-interface.md  removals.md  removed.md  validator.md
specs/altair/light-client/: full-node.md  sync-protocol.md
specs/bellatrix/: beacon-chain.md  fork-choice.md  fork.md  p2p-interface.md  removals.md  removed.md  validator.md
specs/capella/: beacon-chain.md  fork-choice.md  fork.md  p2p-interface.md  removals.md  removed.md  validator.md
specs/capella/light-client/: full-node.md  sync-protocol.md
specs/deneb/: beacon-chain.md  fork-choice.md  fork.md  p2p-interface.md  polynomial-commitments.md  removals.md  removed.md  validator.md
specs/deneb/light-client/: fork.md  full-node.md
specs/electra/: beacon-chain.md  fork.md  p2p-interface.md  removals.md  removed.md  validator.md  weak-subjectivity.md
specs/electra/light-client/: fork.md  sync-protocol.md
specs/fulu/: beacon-chain.md  circuit-breaker.md  das-core.md  fork-choice.md  fork.md  p2p-interface.md  polynomial-commitments-sampling.md  removals.md  removed.md  validator.md
specs/fulu/partial-columns/: p2p-interface.md
specs/gloas/: beacon-chain.md  builder.md  fork-choice.md  fork.md  p2p-interface.md  removals.md  removed.md  validator.md
specs/gloas/partial-columns/: p2p-interface.md
specs/heze/: beacon-chain.md  fork-choice.md  fork.md  removals.md  removed.md  validator.md
specs/phase0/: beacon-chain.md  fast-confirmation.md  fork-choice.md  merkle-proofs.md  p2p-interface.md  validator.md  weak-subjectivity.md
sync/: optimistic.md
tests/: README.md
tests/core/pyspec/eth2spec/gen_helpers/gen_base/: gen_runner.py
tests/core/pyspec/eth2spec/test/: conftest.py  context.py
tests/core/pyspec/eth2spec/test/altair/networking/: test_gossip_sync_committee_contribution_and_proof.py  test_gossip_sync_committee_message.py
tests/core/pyspec/eth2spec/test/bellatrix/networking/: test_gossip_beacon_block.py
tests/core/pyspec/eth2spec/test/helpers/: attestations.py  execution_payload.py  gossip.py  rewards.py  sharding.py  withdrawals.py
tests/core/pyspec/eth2spec/utils/: bls.py
tests/core/pyspec/eth_consensus_specs/debug/: decode.py  encode.py  random_value.py  tools.py
tests/core/pyspec/eth_consensus_specs/test/: conftest.py  context.py
tests/core/pyspec/eth_consensus_specs/test/helpers/: attestations.py  blob.py  block.py  bls_to_execution_changes.py  constants.py  deposit_requests.py  deposits.py  epoch_processing.py  execution_payload.py  execution_requests.py  fast_confirmation.py  fork_choice.py  fork_transition.py  forks.py  genesis.py  gossip.py  inclusion_list.py  light_client.py  light_client_data_collection.py  light_client_sync.py  merkle.py  multi_operations.py  optimistic_sync.py  p2p_size_bounds.py  payload_attestation.py  pow_block.py  proposer_slashings.py  random.py  rewards.py  shard_block.py  specs.py  state.py  sync_committee.py  withdrawals.py
tests/core/pyspec/eth_consensus_specs/test/pytest_plugins/: yield_generator.py
tests/core/pyspec/eth_consensus_specs/test/utils/: dumper.py  kzg_tests.py  randomized_block_tests.py  template_test.py  yield_generator.py
tests/core/pyspec/eth_consensus_specs/utils/: hash_function.py
tests/core/pyspec/eth_consensus_specs/utils/ssz/: ssz_impl.py  ssz_typing.py
tests/formats/: README.md
tests/formats/circuit_breaker/: README.md  update.md
tests/formats/kzg_7594/: compute_verify_cell_kzg_proof_batch_challenge.md
tests/generators/: README.md
tests/generators/kzg_7594/: main.py
tests/generators/runners/: kzg_7594.py
tests/infra/helpers/: test_deposit_requests.py  test_withdrawals.py  withdrawals.py
tests/infra/pytest_plugins/: yield_generator.py
(+152 files in other folders)
