[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eth-consensus-specs"
version = "1.7.0-alpha.12"
authors = [{ name = "ethereum" }]
description = "Ethereum consensus layer specifications package"
license = "CC0-1.0"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12, <3.15"
urls = { homepage = "https://github.com/ethereum/consensus-specs" }
dependencies = [
  "eth-ssz-specs",
  "eth-utils==6.0.0",
  "frozendict==2.4.7",
  "lru-dict==1.4.1",
  "marko==2.2.3",
  "py_arkworks_bls12381==0.5.0",
  "ruamel.yaml==0.19.1",
  "setuptools==83.0.0",
]

[project.optional-dependencies]
test = [
  "ckzg==2.1.8",
  "deepdiff==9.1.0",
  "eth-hash[pycryptodome]==0.8.0",
  "minizinc==0.10.0",
  "psutil==7.2.2",
  "pytest-cov==7.1.0",
  "pytest-html==4.2.0",
  "pytest-sugar==1.1.1",
  "pytest-xdist==3.8.0",
  "pytest==9.1.1",
  "python-snappy==0.7.3",
  "trie==3.1.0",
]
lint = [
  "codespell==2.4.3",
  "mdformat-frontmatter==2.1.2",
  "mdformat-gfm-alerts==2.0.0",
  "mdformat-gfm==1.0.0",
  "mdformat-toc==0.5.0",
  "mdformat==1.0.0",
  "ruff-md==0.15.14",
  "ty==0.0.5",
]
docs = [
  "mdx-truly-sane-lists==1.3",
  "mkdocs-awesome-pages-plugin==2.10.1",
  "mkdocs-gen-files==0.6.1",
  "mkdocs-material==9.7.7",
  "mkdocs==1.6.1",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
configs = "configs"
eth_consensus_specs = "tests/core/pyspec/eth_consensus_specs"
presets = "presets"
specs = "specs"
sync = "sync"

[tool.setuptools.packages.find]
where = ["tests/core/pyspec", "."]
include = ["eth_consensus_specs*", "configs", "presets", "specs", "sync"]
namespaces = true

[tool.setuptools.package-data]
configs = ["*.yaml"]
presets = ["**/*.yaml", "**/*.json"]
specs = ["**/*.md"]
sync = ["optimistic.md"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Flag any suppression comment that no longer matches a real diagnostic, so
# the ignore set stays honest as the generated code evolves.
unused-ignore-comment = "error"

[tool.ty.terminal]
# Treat warning-level diagnostics (e.g. unused ignores, redundant casts) as
# failures so lint stays strict.
error-on-warning = true

[[tool.ty.overrides]]
# The compiled specs lean on SSZ runtime behavior that static analysis cannot
# see, so a few diagnostics are relaxed (see below) for the generated modules
# only; everything else stays strict.
include = ["tests/core/pyspec/eth_consensus_specs/*/mainnet.py", "tests/core/pyspec/eth_consensus_specs/*/minimal.py"]

[tool.ty.overrides.rules]
# Under-supplied constructor calls (SSZ fills the missing fields with defaults).
missing-argument = "ignore"
too-many-positional-arguments = "ignore"
unknown-argument = "ignore"
# Raw values coerced into their SSZ field types on assignment, return, or call.
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
# The p2p `seen` caches call `dict.get(key, set())`; the empty-set default is
# coerced at runtime but does not match the value type statically.
no-matching-overload = "ignore"

[tool.ruff]
line-length = 100
namespace-packages = ["scripts"]
src = ["."]
extend-exclude = [
  "tests/core/pyspec/eth_consensus_specs/phase0",
  "tests/core/pyspec/eth_consensus_specs/altair",
  "tests/core/pyspec/eth_consensus_specs/bellatrix",
  "tests/core/pyspec/eth_consensus_specs/capella",
  "tests/core/pyspec/eth_consensus_specs/deneb",
  "tests/core/pyspec/eth_consensus_specs/electra",
  "tests/core/pyspec/eth_consensus_specs/fulu",
  "tests/core/pyspec/eth_consensus_specs/gloas",
  "tests/core/pyspec/eth_consensus_specs/heze",
  "tests/core/pyspec/eth_consensus_specs/eip*",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Rule families:
  "A",    # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "ANN",  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "BLE",  # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
  "C90",  # https://docs.astral.sh/ruff/rules/#mccabe-c90
  "COM",  # https://docs.astral.sh/ruff/rules/#flake8-commas-com
  "D",    # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "EM",   # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
  "ERA",  # https://docs.astral.sh/ruff/rules/#eradicate-era
  "FIX",  # https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
  "N",    # https://docs.astral.sh/ruff/rules/#pep8-naming-n
  "PERF", # https://docs.astral.sh/ruff/rules/#perflint-perf
  "RET",  # https://docs.astral.sh/ruff/rules/#flake8-return-ret
  "S",    # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "SLF",  # https://docs.astral.sh/ruff/rules/#flake8-self-slf
  "SLOT", # https://docs.astral.sh/ruff/rules/#flake8-slots-slot
  "T20",  # https://docs.astral.sh/ruff/rules/#flake8-print-t20
  "TD",   # https://docs.astral.sh/ruff/rules/#flake8-todos-td
  "TRY",  # https://docs.astral.sh/ruff/rules/#tryceratops-try

  # Specific rules:
  "E501",    # https://docs.astral.sh/ruff/rules/line-too-long/
  "E741",    # https://docs.astral.sh/ruff/rules/ambiguous-variable-name/
  "FBT001",  # https://docs.astral.sh/ruff/rules/boolean-type-hint-positional-argument/
  "FBT002",  # https://docs.astral.sh/ruff/rules/boolean-default-value-positional-argument/
  "PLR0911", # https://docs.astral.sh/ruff/rules/too-many-return-statements/
  "PLR0912", # https://docs.astral.sh/ruff/rules/too-many-branches/
  "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
  "PLR0915", # https://docs.astral.sh/ruff/rules/too-many-statements/
  "PLR1714", # https://docs.astral.sh/ruff/rules/repeated-equality-comparison/
  "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
  "PLW0128", # https://docs.astral.sh/ruff/rules/redeclared-assigned-name/
  "PLW0603", # https://docs.astral.sh/ruff/rules/global-statement/
  "PLW2901", # https://docs.astral.sh/ruff/rules/redefined-loop-name/
  "RUF005",  # https://docs.astral.sh/ruff/rules/collection-literal-concatenation/
  "SIM102",  # https://docs.astral.sh/ruff/rules/collapsible-if/
  "SIM103",  # https://docs.astral.sh/ruff/rules/needless-bool/
  "SIM108",  # https://docs.astral.sh/ruff/rules/if-else-block-instead-of-if-exp/
]

[tool.ruff.lint.per-file-ignores]
"**/*.md" = [
  "F821", # https://docs.astral.sh/ruff/rules/undefined-name/
]
"!specs/**" = [
  "ARG", # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["eth_consensus_specs"]
order-by-type = false

[tool.uv.sources]
# Temporarily track the jtraglia fork for positional construction (`SSZCollection`)
# until https://github.com/leanEthereum/ssz-specs receives it.
eth-ssz-specs = { git = "https://github.com/jtraglia/eth-ssz-specs.git", rev = "0db42f47344d114e9d6b61055dcff7d17da14ffb" }
